# gcp_deployments

./: .dockerignore  Dockerfile  README.md  Report.docx  docker-compose.yml  pyproject.toml
data/: convfinqa_with_agent.json  llm_eval_answer.csv  llm_eval_final.csv  llm_eval_format.csv  llm_eval_retriever.csv
scripts/: agentic_runner.py  evaluator.py  feature_analysis.py
src/: agent.py  dataloader.py  main.py  multiturn_qa.py  prompts.py  service.py  utils.py
tests/: conftest.py  test_service.py
